--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -20,5 +20,8 @@ footer {
         .element {
             margin-bottom: 7px;
         }
+        .fa-solid {
+            width: 20px;
+        }
     }
 }
